Increase width of jump to box so that bold highlited selection does not cause issues

--- a/webpage/pages/bf1/bf1_chart.css
+++ b/webpage/pages/bf1/bf1_chart.css
@@ -576,5 +576,6 @@
 .custom-combobox-input {
     margin: 0;
     padding: 5px 10px;
+    width: 300px;
 }
  /* End custom combobox */
